--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ function toggleButton(choice) {
     <button id="playPauseButton" onclick="toggleMusic()">
         <i class="fas fa-play" id="playPauseIcon"></i>
     </button>
-    <audio id="audioPlayer" src="path_to_your_music_file.mp3" preload="auto"></audio>
+    <audio id="audioPlayer" src="file/separuhku.mp3" preload="auto"></audio>
 </div>
 
     <script>
