--- a/index.html
+++ b/index.html
@@ -170,5 +170,23 @@ window.addEventListener("load", function() {
 });
 
 	</script>
+
+    <div class="comment-section">
+        <h2>Leave a Comment</h2>
+        <p>Feel free to share your thoughts or questions below!</p>
+
+        <!-- Utterances Comment Section -->
+        <div class="utterances-container">
+            <script src="https://utteranc.es/client.js"
+                    repo="DwiExp/DwiExp.github.io"
+                    issue-term="pathname"
+                    label="comments"
+                    theme="github-light"
+                    crossorigin="anonymous"
+                    async>
+            </script>
+        </div>
+    </div>
+	
 </body>
 </html>
