--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ const countdownFunction = setInterval(() => {
 
     <section id="groom">
         <h2>Mempelai Laki-laki</h2>
-        <img src="path_to_groom_photo.jpg" alt="Dwi" />
+        <img src="path_to_groom_photo.jpg" alt="Dwi Harmanto" />
         <p>Putra kedua dari Bpk. Kholy Sudin & Ibu. Sri Suryani</p>
     </section>
 
