--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ const countdownFunction = setInterval(() => {
     <section id="bride">
         <h2>Mempelai Perempuan</h2>
         <img src="path_to_bride_photo.jpg" alt="Nurazisah" />
-        <p>Putri pertana dari Bpk. Sultang Dg.xxx dan Ibu. Subaedah Dg.xxx</p>
+        <p>Putri pertama dari Bpk. Sultang Dg.xxx dan Ibu. Subaedah Dg.xxx</p>
     </section>
 
     <section id="event-info">
@@ -87,7 +87,7 @@ const countdownFunction = setInterval(() => {
 	
 
 <section id="guest-comments">
-    <h2>Komentar & Absensi Tamu Undangan</h2>
+    <h2>Ucapan & Absensi Kehadiran</h2>
     <form id="comment-form">
 
         <div class="attendance-options">
