--- a/index.html
+++ b/index.html
@@ -148,9 +148,17 @@ const countdownFunction = setInterval(() => {
     </form>
     <div id="comments-container"></div> <!-- Tempat untuk menampilkan komentar -->
 </section>
-<script src="script.js"></script>
+
+<section id="comments-container">
+    <h2>Komentar:</h2>
+    <!-- Komentar akan ditampilkan di sini -->
+</section>
+
+<script src="script.js"></script> <!-- Link ke file JavaScript -->
 
 
+
+	
 	
 <script>
 function toggleButton(choice) {
